# commitgen

./: .gitignore  README.md  pyproject.toml
commitgen/: __init__.py  ai_client.py  git_utils.py  main.py  prompt.py
